# dot-matrix

./: .gitignore  ISSUE_TEMPLATE.md  README.md  io.github.lainsce.DotMatrix.Devel.json  io.github.lainsce.DotMatrix.doap  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
_build/: .ninja_deps  .ninja_log  as-resources.c  build.ninja  compile_commands.json  config.h  io.github.lainsce.DotMatrix
_build/data/: io.github.lainsce.DotMatrix.appdata.xml  io.github.lainsce.DotMatrix.desktop.desktop.in  io.github.lainsce.DotMatrixDevel.desktop
_build/io.github.lainsce.DotMatrix.p/src/: Application.c  MainWindow.c
_build/io.github.lainsce.DotMatrix.p/src/Widgets/: UI.c
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: cmd_line.txt
_build/po/: fr.gmo  pl.gmo
build-aux/flatpak/: io.github.lainsce.DotMatrix.json
data/: app.css  app.gresource.xml  com.github.lainsce.dot-matrix.appdata.xml.in  com.github.lainsce.dot-matrix.desktop.in  com.github.lainsce.dot-matrix.gschema.xml  io.github.lainsce.DotMatrix.appdata.xml.in  io.github.lainsce.DotMatrix.desktop.in  io.github.lainsce.DotMatrix.gresource.xml  io.github.lainsce.DotMatrix.gschema.xml  io.github.lainsce.DotMatrix.metainfo.xml.in  meson.build  style-dark.css  style-hc.css  style.css  style.gresource.xml  stylesheet.css
data/icons/: meson.build
data/ui/: mainwindow.ui  menu.ui  prefs.ui  shortcuts.ui
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  README.md  com.github.lainsce.dot-matrix.pot  de.po  es.po  fr.po  hr.po  io.github.lainsce.DotMatrix.pot  it.po  nl.po  pl.po  pt_BR.po  sv.po
po/extra/: LINGUAS  POTFILES  ca.po  es.po  extra.pot  fr.po  it.po  ja.po  lt.po  meson.build  nl.po  pl.po  sv.po
src/: Application.vala  Config.vapi  MainWindow.vala
src/Constants/: AppSettings.vala
src/Services/: SettingsManager.vala
src/Widgets/: Actionbar.vala  Dialog.vala  EditableLabel.vala  Grid.vala  Menu.vala  Prefs.vala  UI.vala
